# stratum

./: .gitignore  .gitmodules  README.md  cargo.toml
amnio-macros/: Cargo.toml
amnio-macros/src/: command_macro.rs  execute_command.rs  generate_module_commands.rs  lib.rs
common/: Cargo.toml
common/firmware-common/: Cargo.toml
common/firmware-common/src/events/: desktop_event_queue.rs  esp32_event_queue.rs
common/firmware-common/src/modules/: battery.rs  mod.rs
common/firmware-common/src/modules/dummies/: mod.rs
common/src/: lib.rs  ui_logging.rs
common/ui-common/: Cargo.toml  build.rs
common/ui-common/bindings/: bindings.rs
common/ui-common/src/: lib.rs  lvgl_backend.rs  lvgl_obj_tree.rs  ui_logging.rs
desktop-runner/: Cargo.toml  README.md
desktop-runner/scripts/: setup-linux.sh  setup-windows.sh
desktop-runner/src/: app.rs  debug_ui.rs  flush_area_collector.rs  fps_tracker.rs  hot_reload_manager.rs  icon.rs  icon_manager.rs  lvgl_backend.rs  lvgl_obj_tree.rs  main.rs  render.rs  sdl2_event_handling.rs  state.rs  stratum_app.rs  stratum_lvgl_ui.rs  window_init.rs
desktop-runner/src/debug_panel/: inspector_page.rs  mod.rs  panel.rs
desktop-runner/src/ui/: index.rs  lvgl_canvas.rs  menu_bar.rs  mod.rs  status_bar.rs
desktop-runner/src/ui/debug_panel/: index.rs  inspector_page.rs  logs_page.rs  mod.rs  pages.rs  performance_page.rs  ui_build_page.rs
desktop-runner/src/ui/debug_panel/elements_page/: index.rs  obj_tree_viewer.rs  property_editor.rs
desktop-runner/src/ui/debug_panel/inspector_page/: index.rs  mod.rs  obj_tree_viewer.rs  property_editor.rs
desktop-runner/src/ui/lvgl_canvas/: element_selection.rs  index.rs  interaction.rs  mod.rs  render.rs  repaint_flash.rs  view.rs
firmware/: Cargo.toml
firmware/src/: lib.rs
firmware/src/comms/: i2c_protocol.rs  mod.rs
firmware/src/events/: mod.rs
firmware/src/modules/: battery.rs  commands.rs  mod.rs  module.rs  module_manager.rs  system_controller.rs
firmware/src/modules/dummies/: dummy_battery.rs
scripts/: setup-env.sh
stratum-firmware/: Cargo.toml  README.md
stratum-firmware/src/: lvgl_backend.rs  main.rs  stratum_lvgl_ui.rs
stratum-ui/: CMakeLists.txt  README.md  build.py  build_lib.py  build_server.py
stratum-ui/include/: extern_log.h  lv_click_cache.h  lv_conf.h  lv_obj_tree.h  lvgl_exports.h  lvlens_flush_area.h  lvlens_registry.h  lvlens_shims.cache.json  lvlens_shims.h  lvlens_widget_list.h  stratum_ui.h  ui_core.h  ui_export_marker.h
stratum-ui/include/components/: component_output_card.h
stratum-ui/include/screens/: screen_dashboard.h  test_example.h
stratum-ui/src/: extern_log.c  lv_click_cache.c  lv_obj_tree.c  lvgl_exports.c  lvlens_flush_area.c  lvlens_registry.c  stratum_ui.c
stratum-ui/src/components/: component_output_card.c
stratum-ui/src/screens/: screen_dashboard.c  screen_dashboard.h  test_example.c
stratum-ui/tools/: generate_font_c_files.py  generate_font_headers.py  generate_fonts.py  generate_shims.py
tools/data-logger/: Cargo.toml
tools/module-sim/: Cargo.toml
ui/amnio-ui/: CMakeLists.txt  README.md  build.sh
ui/amnio-ui/include/: amnio_ui.h  lv_conf.h  lvgl_driver.h
ui/amnio-ui/src/: amnio_ui.c  main.c
ui/desktop-runner/: Cargo.toml  README.md  build.rs
ui/desktop-runner/__cmake_systeminformation/: CMakeCache.txt
ui/desktop-runner/src/: amnio_lvgl_ui.rs  amnio_ui.rs  debug_ui.rs  lvgl_renderer.rs  lvgl_sys.rs  main.rs  sdl_display.rs  window_init.rs
ui/embedded-runner/: Cargo.toml
ui/embedded-runner/src/: embedded_display.rs
ui/embedded-ui/: Cargo.toml
ui/lvgl/: Cargo.toml
