[package]
name = "desktop-runner"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"

[dependencies]
egui_sdl2_gl = "0.31.0"
sdl2 = "0.37.0"
egui = "0.31.1"
env_logger = "0.11.7"
log = "0.4.26"
amnio-firmware = { path = "../firmware" }
stratum-ui-common = { path = "../common/ui-common" }
re_ui = "0.23.1"
