[package]
name = "desktop-runner"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
env_logger = "0.11.7"
log = "0.4.26"
amnio-firmware = { path = "../firmware" }
stratum-ui-common = { path = "../common/ui-common", features = ["desktop"] }
re_ui = "0.23.1"
notify = "8.0.0"
chrono = "0.4.41"
glob = "0.3.2"
fern = "0.7.1"
