[package]
name = "desktop-runner"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.16"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
env_logger = "0.11.7"
log = "0.4.26"
stratum-firmware-common = { path = "../common/firmware-common" }
stratum-ui-common = { path = "../common/ui-common", features = ["desktop"] }
notify = "8.0.0"
chrono = "0.4.41"
glob = "0.3.2"
fern = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
egui_ltreeview = "0.4.1"
strum = "0.27.1"
strum_macros = "0.27.1"
usvg = "0.45.1"
resvg = "0.45.1"
tiny-skia = "0.11.4"
sha2 = "0.10.9"
