[package]
name = "amnio-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
uom = "0.36.0"
amnio-macros = { path = "../amnio-macros" }
stratum-ui-common = { path = "../common/ui-common" }
log = "0.4.26"
rand = "0.9.0"
crossbeam = "0.8.4"
paste = "1.0.15"
thiserror = "2.0.12"
anyhow = "1.0.97"
crc = "3.2.1"

[features]
xtensa = []
