[package]
name = "stratum-firmware"
version = "0.1.0"
authors = ["Erick <erick_torres@brown.edu>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "stratum-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[build-dependencies]
embuild = "0.33"

[dependencies]
log = "0.4"
stratum-ui-common = { path = "../common/ui-common", features=["firmware"] }
esp-idf-svc = { version = "0.51", features = ["critical-section"] }
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"


[package.metadata]
stratum-ui-target = "firmware"
