[package]
name = "stratum-ui-common"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.71.1"
toml = "0.8.22"
regex = "1.11.1"
syn = "2.0.101"
quote = "1.0.40"
proc-macro2 = "1.0.95"

[dependencies]
lazy_static = "1.5.0"
libloading = "0.8.7"
log = "0.4.26"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["desktop"]
desktop = []
firmware = []
